--- a/python-server_side_rendering/templates/header.html
+++ b/python-server_side_rendering/templates/header.html
@@ -2,9 +2,9 @@
   <h1>My Flask App</h1>
   <nav>
     <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </nav>
 </header>
