Display ram No items found

--- a/python-server_side_rendering/templates/items.html
+++ b/python-server_side_rendering/templates/items.html
@@ -1,12 +1,16 @@
 <title>Items List</title>
 <ul>
   {% for key, list in items_list.items() %}
+
   {% if not list %}
-  {{ "No items found" }}
+  No items found
+
   {% else %}
+
   {% for item in list %}
   <li>{{ item }}</li>
   {% endfor %}
+
   {% endif %}
   {% endfor %}
 </ul>
