Render template return just a list.... not the dict

--- a/python-server_side_rendering/templates/items.html
+++ b/python-server_side_rendering/templates/items.html
@@ -1,13 +1,10 @@
 <title>Items List</title>
 <ul>
-  {% for key, list in items_list.items() %}
-
-  {% for item in list %}
+  {% for item in items_list %}
   <li>{{ item }}</li>
 
   {% else %}
   No items found
 
-  {% endfor %}
   {% endfor %}
 </ul>
