--- a/python-server_side_rendering/templates/items.html
+++ b/python-server_side_rendering/templates/items.html
@@ -1,10 +1,14 @@
 <title>Items List</title>
 <ul>
+  {% if items %}
+
   {% for item in items %}
   <li>{{ item }}</li>
+  {% endfor %}
 
   {% else %}
   No items found
 
-  {% endfor %}
+  {% endif %}
+
 </ul>
