Change endfor placement and wrap products error message in a <p>

--- a/python-server_side_rendering/templates/product_display.html
+++ b/python-server_side_rendering/templates/product_display.html
@@ -15,14 +15,14 @@
       <td>{{ product["name"] }}</td>
       <td>{{ product["category"] }}</td>
       <td>{{ product["price"] }}</td>
-      {% endfor %}
-
     </tr>
+    {% endfor %}
+
   </tbody>
 </table>
 
 {% else %}
 
-{{ products }}
+<p>{{ products }}</p>
 
 {% endif %}
