--- a/python-server_side_rendering/templates/items.html
+++ b/python-server_side_rendering/templates/items.html
@@ -1,13 +1,22 @@
-<title>Items List</title>
-<ul>
+<!doctype html>
+<html>
+
+<head>
+  <title>Items List</title>
+</head>
+
+<body>
   {% if items %}
 
-  {% for item in items %}
-  <li>{{ item }}</li>
-  {% endfor %}
+  <ul>
+    {% for item in items %}
+    <li>{{ item }}</li>
+    {% endfor %}
+  </ul>
 
   {% else %}
-  <strong>No items found</strong>
+  <p>No items found</p>
   {% endif %}
+</body>
 
-</ul>
+</html>
