--- a/python-server_side_rendering/templates/product_display.html
+++ b/python-server_side_rendering/templates/product_display.html
@@ -22,9 +22,9 @@
 
       {% for product in products %}
       <tr>
-        <td>{{ product["name"] }}</td>
-        <td>{{ product["category"] }}</td>
-        <td>{{ product["price"] }}</td>
+        <td>{{ product.name }}</td>
+        <td>{{ product.category }}</td>
+        <td>{{ product.price}}</td>
       </tr>
       {% endfor %}
 
