Invert if logic

--- a/python-server_side_rendering/templates/product_display.html
+++ b/python-server_side_rendering/templates/product_display.html
@@ -8,7 +8,10 @@
 <body>
   <h1>Product List</h1>
 
-  {% if not message %}
+  {% if message %}
+  <p>{{ message }}</p>
+
+  {% else %}
 
   <table>
     <thead>
@@ -30,10 +33,6 @@
 
     </tbody>
   </table>
-
-  {% else %}
-
-  <p>{{ message }}</p>
 
   {% endif %}
 
